--- a/ParkingSystem/ParkingSystem.vbproj
+++ b/ParkingSystem/ParkingSystem.vbproj
@@ -171,12 +171,6 @@
     <Compile Include="Parking_Function\Park_List.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Pop_up\Combobox.Designer.vb">
-      <DependentUpon>Combobox.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Pop_up\Combobox.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Pop_up\InputBox.Designer.vb">
       <DependentUpon>InputBox.vb</DependentUpon>
     </Compile>
@@ -196,12 +190,6 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Database\Server.vb" />
-    <Compile Include="Report\Report.Designer.vb">
-      <DependentUpon>Report.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Report\Report.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Transaction\Transaction_Histroy_List.Designer.vb">
       <DependentUpon>Transaction_Histroy_List.vb</DependentUpon>
     </Compile>
@@ -270,9 +258,6 @@
     <EmbeddedResource Include="Parking_Function\Park_List.resx">
       <DependentUpon>Park_List.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Pop_up\Combobox.resx">
-      <DependentUpon>Combobox.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Pop_up\InputBox.resx">
       <DependentUpon>InputBox.vb</DependentUpon>
     </EmbeddedResource>
@@ -317,6 +302,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Report\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.111.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.111.0\build\net451\System.Data.SQLite.Core.targets')" />
