--- a/ParkingSystem/ParkingSystem.vbproj
+++ b/ParkingSystem/ParkingSystem.vbproj
@@ -115,6 +115,7 @@
       <DependentUpon>DashBoard.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Entities\User.vb" />
     <Compile Include="Entities\Membership.vb" />
     <Compile Include="Entities\Parking_Area.vb" />
     <Compile Include="Entities\Promo.vb" />
@@ -153,10 +154,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="MemberShip\Parking_Add.Designer.vb">
+    <Compile Include="Parking_Function\Parking_Add.Designer.vb">
       <DependentUpon>Parking_Add.vb</DependentUpon>
     </Compile>
-    <Compile Include="MemberShip\Parking_Add.vb">
+    <Compile Include="Parking_Function\Parking_Add.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Parking_Function\Parking_Area_Used.Designer.vb">
@@ -190,6 +191,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Database\Server.vb" />
+    <Compile Include="Report\Receipt.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Receipt.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Transaction\Transaction_Histroy_List.Designer.vb">
       <DependentUpon>Transaction_Histroy_List.vb</DependentUpon>
     </Compile>
@@ -249,7 +256,7 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="MemberShip\Parking_Add.resx">
+    <EmbeddedResource Include="Parking_Function\Parking_Add.resx">
       <DependentUpon>Parking_Add.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Parking_Function\Parking_Area_Used.resx">
@@ -266,6 +273,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Promo\Pricing_Promo.resx">
       <DependentUpon>Pricing_Promo.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Report\Receipt.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>Receipt.vb</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Transaction\Transaction_Histroy_List.resx">
       <DependentUpon>Transaction_Histroy_List.vb</DependentUpon>
@@ -303,9 +314,7 @@
   <ItemGroup>
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Report\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.111.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.111.0\build\net451\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
